--- a/src/main/resources/templates/java/awsserverless/build.gradle.vm
+++ b/src/main/resources/templates/java/awsserverless/build.gradle.vm
@@ -16,7 +16,7 @@ subprojects {
     }
 
     dependencies {
-        compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
 
         // AWS Lambda
         compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
