--- a/src/main/resources/templates/java/services/build.gradle.vm
+++ b/src/main/resources/templates/java/services/build.gradle.vm
@@ -16,7 +16,7 @@ subprojects {
     }
 
     dependencies {
-        compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
         compile group: 'com.worksap.webapi', name: 'api-exceptions', version: '1.0'
 
         // Dependency Injection
