--- a/src/main/resources/templates/java/sparkjava/build.gradle.vm
+++ b/src/main/resources/templates/java/sparkjava/build.gradle.vm
@@ -17,9 +17,9 @@ repositories {
 }
 
 dependencies {
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.5'
     compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.2'
 
     compile group: 'com.auth0', name: 'java-jwt', version: '2.2.0'
