--- a/src/main/resources/templates/java/services/Response.java.vm
+++ b/src/main/resources/templates/java/services/Response.java.vm
@@ -11,7 +11,8 @@ import lombok.Value;
 @Builder
 public class ${methodName}Response {
 #foreach ( $headerEntry in $successResponse.headers.entrySet() )
-    private String ${utils.case.lowerCamelCase($headerEntry.key)};
+#set ( $header = $headerEntry.value )
+    private ${utils.java.toType($header.type, $header.format)} ${utils.case.lowerCamelCase($headerEntry.key)};
 #end
 #if ( $successResponse.schema )
 #set ( $responseBodyModelClassName = ${utils.case.upperCamelCase($utils.schema.resolveName($successResponse.schema, $api.definitions, $methodName.concat('ResponseBody')))} )
