--- a/src/main/resources/templates/java/services/build.gradle.vm
+++ b/src/main/resources/templates/java/services/build.gradle.vm
@@ -17,7 +17,7 @@ subprojects {
 
     dependencies {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
-        compile group: 'com.worksap.webapi', name: 'api-exceptions', version: '1.0'
+        compile group: 'com.worksap.webapi', name: 'api-exceptions', version: '1.+'
 
         // Dependency Injection
         compile group: 'javax.inject', name: 'javax.inject', version: '1'
